Made some adjustments on the colors to fix contrast issues

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
 
 .nav-list {
     height: 80px;
-    background: rgba(0, 0, 0, .75);
+    background: rgba(0, 0, 0, .85);
     box-shadow: 0px 0px 5px #606060;
     margin: 0;
     padding: 1rem 0;
@@ -86,7 +86,7 @@ li a:hover {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(0, 0, 0, .50);
+    background-color: rgba(0, 0, 0, .85);
     box-shadow: 0px 0px 8px #606060;
 }
 
@@ -107,7 +107,7 @@ li a:hover {
     width: 1000px;
     padding-top: 40px;
     cursor: default;
-    background-color: rgba(0, 0, 0, .50);
+    background-color: rgba(0, 0, 0, .85);
     box-shadow: 0px 0px 2px #606060;
     animation: fadeIn 1s;
 }
@@ -131,7 +131,7 @@ li a:hover {
     height: 700px;
     width: 850px;
     cursor: default;
-    background-color: rgba(0, 0, 0, .50);
+    background-color: rgba(0, 0, 0, .85);
     box-shadow: 0px 0px 2px #606060;
     animation: fadeIn 1s;
 }
@@ -174,7 +174,7 @@ li a:hover {
     padding-left: 5px;
     border: none;
     outline: none;
-    background: rgba(0, 0, 0, .50);
+    background: rgba(0, 0, 0, .85);
     color: #c1c1c1;
     box-shadow: 0px 0px 2px #606060;
 }
@@ -191,7 +191,7 @@ li a:hover {
     padding-top: 5px;
     border: none;
     outline: none;
-    background: rgba(0, 0, 0, .50);
+    background: rgba(0, 0, 0, .85);
     color: #c1c1c1;
     box-shadow: 0px 0px 2px #606060;
 }
@@ -200,7 +200,7 @@ li a:hover {
     display:inline-block;
     padding:0.35em 1.2em;
     border: 1px solid #606060;
-    background: rgba(0, 0, 0, .30);
+    background: rgba(0, 0, 0, .60);
     margin:0 0.3em 0.3em 0;
     box-sizing: border-box;
     text-decoration:none;
@@ -212,14 +212,14 @@ li a:hover {
 }
 
 #submitBtn:hover {
-    background-color: rgba(0, 0, 0, .80);
+    background-color: rgba(0, 0, 0, .85);
     box-shadow: 0 0 5px #606060;
     border-color: #c0c0c0;
     cursor: pointer;
 }
 
 .footer {
-    background: rgba(0, 0, 0, .75);
+    background: rgba(0, 0, 0, .85);
     box-shadow: 0px 0px 3px #606060;
     margin: 0;
     display: flex;
